Bug 381922 - The geometric shapes don't allow choosing the foreground/background color for the stroke.
Summary: The geometric shapes don't allow choosing the foreground/background color for...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layers/Vector (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-07-02 17:09 UTC by wolthera
Modified: 2019-09-18 13:53 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description wolthera 2017-07-02 17:09:04 UTC
This is a bit annoying, as we decided to have fill=foreground color and stroke=background color.

When using the geometric tools however, we can pick whether to fill with fore or background color, but we can only stroke it with 'brush' which is always set to foreground color. A solution to this could be to add foreground/background as separate optons to the geometric tools.
Comment 1 Quiralta 2017-07-12 17:54:24 UTC
There would be also very practical to have the "no outline" option applied to the creation of shapes, as it is right now, shapes can be created with out fill color but not without outline.

Commenting it here as I think this is an extension of this functionality topic.
Comment 2 Dmitry Kazakov 2019-09-18 13:53:26 UTC
Git commit d619b7134b5e1b5c84241add1f1780fba09e680a by Dmitry Kazakov.
Committed on 18/09/2019 at 13:53.
Pushed by dkazakov into branch 'master'.

In vector tools, we use bg-color as stroke and fg-color as fill. This
patch makes it possible to have the same configuration in the shape
creation tools.

M  +0    -7    libs/image/kis_painter.cc
M  +1    -3    libs/image/kis_painter.h
M  +4    -4    libs/ui/actions/kis_selection_action_factories.cpp
M  +9    -9    libs/ui/dialogs/kis_dlg_stroke_selection_properties.cpp
M  +2    -2    libs/ui/dialogs/kis_dlg_stroke_selection_properties.h
M  +13   -0    libs/ui/forms/wdggeometryoptions.ui
M  +2    -2    libs/ui/kis_selection_manager.cc
A  +17   -0    libs/ui/tool/KisToolShapeUtils.cpp     [License: GPL (v2+)]
A  +40   -0    libs/ui/tool/KisToolShapeUtils.h     [License: GPL (v2+)]
M  +50   -4    libs/ui/tool/kis_figure_painting_tool_helper.cpp
M  +8    -2    libs/ui/tool/kis_figure_painting_tool_helper.h
M  +19   -23   libs/ui/tool/kis_tool_shape.cc
M  +3    -2    libs/ui/tool/kis_tool_shape.h
M  +1    -1    plugins/tools/basictools/kis_tool_pencil.cc
M  +6    -2    plugins/tools/basictools/kis_tool_rectangle.cc

https://invent.kde.org/kde/krita/commit/d619b7134b5e1b5c84241add1f1780fba09e680a