FEATURE: Add backgroung color as an option for newly created shapes

In vector tools, we use bg-color as stroke and fg-color as fill. This
patch makes it possible to have the same configuration in the shape
creation tools.

BUG:381922