libs/image/kis_painter.h
@@ -722,9 +722,7 @@ public:
         FillStyleForegroundColor,
         FillStyleBackgroundColor,
         FillStylePattern,
-        FillStyleGradient,
-        FillStyleStrokes,
-        FillStyleGenerator,
+        FillStyleGenerator
     };
 
     /// Set the current style with which to fill
